# tinnitus-reducer-acrn

./: .editorconfig  .eslintrc.cjs  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.yaml  LICENSE  README.md  ThirdPartyNotices.txt  index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  renovate.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: create-diagram  publish-gh-pages.yml  publish-tauri-apps.yml  publish.yml  run-build-test-on-pr.yml  run-frontend-test.yml  test-on-pr.yml
icon/Headphone/: LICENSE.txt
public/: browserconfig.xml  site.webmanifest
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: FrequencyController.svelte  FrequencyController.test.ts  ModeController.svelte  ModeController.test.ts  Navbar.svelte  Oscillator.svelte  Oscillator.test.ts  PlayController.svelte  PlayController.test.ts  Sequence.svelte  ToggleThemeButton.svelte  VolumeController.svelte  VolumeController.test.ts  constants.ts  settings.ts  stores.ts  utils.ts
src/lib/config_panel/: ConfigPanel.svelte  Input.svelte  Slider.svelte
src/lib/icons/: GitHubMark.svelte
src/lib/nav/: CustomTitleBar.svelte  Modal.svelte  Navbar.svelte  TimerModal.svelte  Toast.svelte
src/lib/nav/chart/: Bar.svelte  Chart.svelte  Line.svelte  Point.svelte
src/lib/nav/menu/: ExportConfigButton.svelte  ImportConfigButton.svelte  ResetConfigButton.svelte  TimerButton.svelte  ToggleThemeButton.svelte
src/tests/: FrequencyController.test.ts  ModeController.test.ts  Oscillator.test.ts  PlayController.test.ts  Sequence.test.ts  VolumeController.test.ts  settings.test.ts
tests/: FrequencyController.test.ts  ModeController.test.ts  Oscillator.test.ts  PlayController.test.ts  VolumeController.test.ts
